# neurolite

./: Cargo.toml  rust-toolchain.toml
src/: main.rs  matrix.rs  matrix_utils.rs  network.rs
src/network/: layer.rs  mod.rs  node.rs
tests/: test_network.rs
