[package]
name = "neurolite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
na = { package = "nalgebra", version = "0.31.3" }
num-traits = "0.2.15"
rand = "0.8.5"
textflow = "0.2.0"

[features]
defaults = ["debug_print"]
debug_print = []
